		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.4 *-

??062002 (v2.1dev10)
	- added: -G:mgrtype,optstring switch for setting 
		 audio object manager level options
	- added: -G:jack,client_name,operation_mode option; see 
	         ecasound(1) for details
	- changed: major data structure cleanup in the JACK
	 	   plugin
	- fixed: 'unknown device state' errors with multichannel 
		 soundcards like midiman deltaXX and rme 
		 when starting processing and if -z:intbuf mode 
		 was selected
	- fixed: due to changes in autoconf variables, non-atomic
		 locking was always used instead of atomic locking 
  		 in 2.1dev8 and 2.1dev9
	- fixed: configure failed if an old (<0.9) ALSA version was 
		 installed even if --disable-alsa was specified
	- fixed: loading chainsetup from interactive mode failed
		 both with cs-load and after cs-edit
	- fixed: compiling against readline 4.2 with 
		 --enable-sys-readline failed
	- fixed: bugs in the -z:db subsystem caused segfaults
	- fixed: problems with -z:db and small files
17052002 (v2.1dev9)
	- edi-entries: edi-22
	- changed: optimized disk i/o subsystem (-z:db) performance
	- changed: edi-22 fully implemented (JACK-support)
	- fixed: disk i/o subsystem didn't discard all old data 
		 after a seek to a new location
	- fixed: installing pyeca.py failed if ecasound was 
		 built outside srcdir
	- fixed: timeouts when starting chainsetups with JACK 
		 input/outputs
	- fixed: bug in stopping JACK input/outputs; affects 
		 seeking in interactive mode
13052002 (v2.1dev8)
	- edi-entries: edi-13, edi-18, edi-21, edi-22
	- added: reverse audio object type; see the ecasound(1) 
		 man page for better documentation
	- added: pyecasound - if python version is 2.2 or higher, 
		 pyeca.py sets custom dlopen flags before importing
	         the actual pyecasound python module; this makes it
		 possible to access ecasound's plugins (ALSA, JACK,