@@ -39,6 +39,9 @@
 /* well, are you? :) */
 #undef ECA_FEELING_EXPERIMENTAL
 
+/* whether to disable all use of shared libs */
+#undef ECA_STATIC_ONLY
+
 /* use locking primitives found in asm/atomic.h */
 #undef ECA_USE_ASM_ATOMIC
 
